--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
         <meta name="revisit-after" content="15days">
-        <title>SPA_IMC</title>
         <link rel="stylesheet" href="./src/CSS/styles.css">
         <title>Age Interactive System</title>
     </head>
     <body>
         <header>
-
+            <h1>Age Interactive System</h1>
         </header>
         <main class="container">
+            <input type="text" name="" id="name" placeholder="Writing your name: ">
+            <input type="number" name="" id="age" placeholder="Please writting your name: ">
+            <button type="button" id="btn-validation">Validation!</button>
 
+            <section id="result"></section>
         </main>
         <footer>
 
