Feat: Add the functionaly for html and js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="container">
             <input type="text" name="" id="name" placeholder="Writing your name: ">
             <input type="number" name="" id="age" placeholder="Please writting your name: ">
-            <button type="button" id="btn-validation" onclick="validation()">Validation!</button>
+            <button type="button" id="btn-validation">Validation!</button>
 
             <section id="result"></section>
         </main>
