Feat: Add styles and restructure

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
         <header>
             <h1>Age Interactive System</h1>
         </header>
-        <main class="container">
-            <input type="text" name id="name" placeholder="Writing your name: ">
-            <input type="number" name id="age"
-                placeholder="Please writting your name: ">
-            <button type="button" id="btn-validation">Validation!</button>
-
-            <section id="result"></section>
+        <main>
+            <section class="container">
+                <input type="text" name id="name" placeholder="Writing your name: ">
+                <input type="number" name id="age"
+                    placeholder="Please writting your name: ">
+                <button type="button" id="btn-validation">Validation!</button>
+                <section id="result"></section>
+            </section>
         </main>
         <footer>
             <p>2025 wilffren</p>
