Feat: Complete the styles for desktop

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         </header>
         <main>
             <section class="container">
+                <h2><em>Hello!</em></h2>
                 <input type="text" name id="name" placeholder="Writing your name: ">
                 <input type="number" name id="age"
-                    placeholder="Please writting your name: ">
+                    placeholder="Please writting your Age: ">
                 <button type="button" id="btn-validation">Validation!</button>
+                
+                <br>
                 <section id="result"></section>
             </section>
         </main>
