Feat: The comment the code was created

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--This section is a metatags for more information about the page and links for styles-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
@@ -21,21 +22,24 @@
         <title>Age Interactive System</title>
     </head>
     <body>
+        <!--Frist section, with a title for a page-->
         <header>
             <h1>Age Interactive System</h1>
         </header>
+        <!--Principal section of page, include an inputs and one button validation, section for a show a message in javascript-->
         <main>
             <section class="container">
                 <h2><em>Hello!</em></h2>
-                <input type="text" name id="name" placeholder="Writing your name: ">
+                <input type="text" name id="name"
+                    placeholder="Writing your name: ">
                 <input type="number" name id="age"
                     placeholder="Please writting your Age: ">
                 <button type="button" id="btn-validation">Validation!</button>
-                
                 <br>
                 <section id="result"></section>
             </section>
         </main>
+        <!--Final section, year and name of creator-->
         <footer>
             <p>2025 wilffren</p>
         </footer>
