Feat: V1.05 was created

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             content="This web application, developed with HTML, CSS, and JavaScript, validates a user's age along with their name. It offers a simple and intuitive interface so users can quickly access their results and find out their ranking based on the score obtained.">
         <meta name="keywords" content="Age, System, Interactive, ">
         <meta name="sitedomain"
-            content="https://jcomte23.github.io">
+            content="https://wilffren.github.io/Age_Interactive_System/">
         <meta name="organization" content="https://github.com/wilffren">
         <meta name="author" content="Wilffren Efrain Muñoz Velasquez">
         <meta name="designer" content="Wilffren Efrain Muñoz Velasquez">
